--- a/wp-content/themes/miradas/scss/hero/_home.scss
+++ b/wp-content/themes/miradas/scss/hero/_home.scss
@@ -6,4 +6,41 @@
     video {
         width: 100%;
     }
+
+    &::before {
+        content: '';
+        display: block;
+        position: absolute;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        background: rgba(48, 35, 8, .40);
+        width: 100%;
+        height: 100%;
+    }
+
+    &__content {
+        position: absolute;
+        top: 50%;
+        left: 0;
+        transform: translate(6%, -50%);
+        z-index: 4;
+        width: 100%;
+        max-width: 100%;
+    }
+
+    &__big_text {
+        @include h1();
+        font-size: 100px;
+        text-transform: uppercase;
+        color: $white;
+        font-weight: 700;
+        z-index: 10;
+    }
+
+    &__bottom_text {
+        @include h4();
+        color: $white;
+        z-index: 10;
+    }
 }
