--- a/wp-content/themes/miradas/style.css
+++ b/wp-content/themes/miradas/style.css
@@ -1801,6 +1801,62 @@ body .gform_wrapper ul.gform_fields li.gfield.gform_validation_container {
 .hero-home video {
   width: 100%;
 }
+.hero-home::before {
+  content: "";
+  display: block;
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background: rgba(48, 35, 8, 0.4);
+  width: 100%;
+  height: 100%;
+}
+.hero-home__content {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  -webkit-transform: translate(6%, -50%);
+          transform: translate(6%, -50%);
+  z-index: 4;
+  width: 100%;
+  max-width: 100%;
+}
+.hero-home__big_text {
+  font-size: 55px;
+  font-family: "Rosario", sans-serif;
+  font-size: 100px;
+  text-transform: uppercase;
+  color: #ffffff;
+  font-weight: 700;
+  z-index: 10;
+}
+@media only screen and (max-width: 1050px) {
+  .hero-home__big_text {
+    font-size: 45px;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .hero-home__big_text {
+    font-size: 40px;
+  }
+}
+.hero-home__bottom_text {
+  font-size: 30px;
+  font-family: "Rosario", sans-serif;
+  color: #ffffff;
+  z-index: 10;
+}
+@media only screen and (max-width: 1050px) {
+  .hero-home__bottom_text {
+    font-size: 26px;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .hero-home__bottom_text {
+    font-size: 24px;
+  }
+}
 
 .hero_simple {
   margin-top: 30px;
