--- a/wp-content/themes/miradas/scss/hero/_home.scss
+++ b/wp-content/themes/miradas/scss/hero/_home.scss
@@ -8,15 +8,7 @@
     }
 
     &::before {
-        content: '';
-        display: block;
-        position: absolute;
-        z-index: 1;
-        top: 0;
-        left: 0;
-        background: rgba(48, 35, 8, .40);
-        width: 100%;
-        height: 100%;
+        @include overlay();
     }
 
     &__content {
@@ -36,6 +28,14 @@
         color: $white;
         font-weight: 700;
         z-index: 10;
+
+        &::after {
+            content: '';
+            border-top: 4px solid $white;
+            width: 150px;
+            display: flex;
+            margin: 10px 0 20px 0;
+        }
     }
 
     &__bottom_text {
