--- a/wp-content/themes/miradas/scss/blocks/_logos.scss
+++ b/wp-content/themes/miradas/scss/blocks/_logos.scss
@@ -23,12 +23,17 @@
     }
     &__cont {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(5, 1fr);
         grid-gap: 20px;
         padding: 70px 0 48px;
 
+        @include responsive ('desktop-m') {
+            grid-template-columns: repeat(3, 1fr);
+        }
+
         @include responsive('tablet-h') {
             padding: 40px 0;
+            grid-template-columns: repeat(2, 1fr);
         }
 
         @include responsive('mobile-v') {
