--- a/wp-content/themes/miradas/scss/components/_socials.scss
+++ b/wp-content/themes/miradas/scss/components/_socials.scss
@@ -2,6 +2,14 @@
     display: flex;
     gap: 12px;
 
+    svg {
+        path {
+            fill {
+                color: red;    
+            }
+        }
+    }
+
     @include responsive ('tablet-h') {
         gap: 40px;
     }
