--- a/wp-content/themes/miradas/scss/abstracts/_mixins_theme.scss
+++ b/wp-content/themes/miradas/scss/abstracts/_mixins_theme.scss
@@ -155,10 +155,20 @@
   height: 100%;
 }
 
-@mixin padding-section {
+@mixin padding-section() {
   padding: 90px 0;
 
   @include responsive ('mobile-h') {
     padding: 40px 0;
   }
+}
+
+@mixin center-position() {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 100%;
+  padding: 0 20px;
 }
