--- a/wp-content/themes/miradas/scss/base/_base.scss
+++ b/wp-content/themes/miradas/scss/base/_base.scss
@@ -218,16 +218,50 @@ strong * {
     z-index: 100;
     top: 16vh;
     left: 50%;
-    -webkit-transform: translate(-50%, 0);
     transform: translate(-50%, 0);
     width: 755px;
     height: 40vh;
     background: #ffffff;
     padding: 30px;
     text-align: left;
-    -webkit-box-shadow: 9px 10px 48px 0px rgb(0 0 0 / 75%);
     box-shadow: 9px 10px 48px 0px rgb(0 0 0 / 75%);
     z-index: 101;
+
+    /* &::before {
+      content: "";
+    display: block;
+    position: absolute;
+    z-index: 100;
+    top: 0;
+    left: 0;
+    background: rgba(48, 35, 8, 0.8);
+    width: 100%;
+    height: 100%;
+    } */
+
+    .close_popup {
+      position: absolute;
+      right: 2%;
+      top: 2%;
+      z-index: 100;
+      cursor: pointer;
+      background-image: url(images/close-form.svg);
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-color: transparent;
+      width: 20px;
+      height: 30px;
+    }
+
+    .formBox {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 2;
+      width: 100%;
+      padding: 0 20px;
+    }
 }
 
 
