--- a/wp-content/themes/miradas/scss/components/_forms.scss
+++ b/wp-content/themes/miradas/scss/components/_forms.scss
@@ -30,23 +30,18 @@
 		max-width: 100%;	
 		position: relative;
 
+		position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    width: 100%;
+    padding: 0 20px;
+
 		.gform_footer {
 			text-align: center;
 		}		
-
-		.close_popup {
-      position: absolute;
-      right: 2%;
-      top: 2%;
-      z-index: 100;
-      cursor: pointer;
-      background-image: url(images/close-form.svg);
-      background-repeat: no-repeat;
-      background-size: contain;
-      background-color: transparent;
-      width: 20px;
-      height: 30px;
-    }
 	}
 }
 
