--- a/wp-content/themes/miradas/scss/header/_base.scss
+++ b/wp-content/themes/miradas/scss/header/_base.scss
@@ -63,6 +63,12 @@
       display: flex;
       align-items: center;
       justify-content: flex-end;
+
+      .buttom_suscribe {
+        @include responsive ('tablet-h') {
+          display: none;
+        }
+      }
     }
   }
 
