--- a/wp-content/themes/miradas/scss/base/_base.scss
+++ b/wp-content/themes/miradas/scss/base/_base.scss
@@ -267,7 +267,7 @@ strong * {
 
 
 //Styles Home
-.quienes_somos {
+.vision {
   position: relative;
   
   &__image {
@@ -311,3 +311,4 @@ strong * {
     color: #D1F5AB;
   }
 }
+
