--- a/wp-content/themes/miradas/scss/main.scss
+++ b/wp-content/themes/miradas/scss/main.scss
@@ -48,7 +48,8 @@ Text Domain: twentysixteen
   'blocks/stay_informed',
   'blocks/logos',
   'blocks/_contact',
-  'blocks/_buttons';
+  'blocks/_buttons',
+  'blocks/_video';
 
   // Posts
   @import
