--- a/wp-content/themes/miradas/scss/blocks/_stay_informed.scss
+++ b/wp-content/themes/miradas/scss/blocks/_stay_informed.scss
@@ -106,13 +106,16 @@
         .gform_footer {
             padding: 16px 0 0 !important;
             .gform_button {
-                background-color: $third-color;
+                background-color: $primary-color;
                 border-radius: 25px;
                 margin-bottom: 0 !important;
                 font-size: 16px !important;
+                border: 1px solid $primary-color;
 
                 &:hover {
-                    background-color: $primary-color !important;
+                    background-color: $white !important;
+                    border: 1px solid $white;
+                    color: $primary-color;
                 }
             }
         }
