--- a/wp-content/themes/miradas/scss/components/_menu.scss
+++ b/wp-content/themes/miradas/scss/components/_menu.scss
@@ -7,7 +7,7 @@
   
 
   &__item {
-    margin: 0 22px;
+    margin: 0 10px;
 
     @include responsive ('desktop-s') {
       margin: 0 12px;
@@ -20,7 +20,7 @@
     }
 
     &--text {
-      font-size: 20px;
+      font-size: 22px;
       line-height: 0.9;
       color: $primary-color;
       font-weight: 700;
@@ -228,6 +228,7 @@
 
   .buttom_suscribe {
     @extend .button;
+    margin-left: 20px;
   }
 }
 .scrolled {
