--- a/wp-content/themes/miradas/scss/header/_base.scss
+++ b/wp-content/themes/miradas/scss/header/_base.scss
@@ -41,7 +41,7 @@
   &__bottom {
     display: flex;
     width: 100%;
-    padding: 28px 0 27px 0;
+    padding: 20px 0;
     justify-content: space-between;
     align-items: center;
 
