--- a/wp-content/themes/miradas/scss/hero/_home.scss
+++ b/wp-content/themes/miradas/scss/hero/_home.scss
@@ -23,7 +23,7 @@
     &__big_text {
         @include h1();
         font-size: 100px;
-        text-transform: uppercase;
+        text-transform: capitalize;
         color: $white;
         font-weight: 700;
         z-index: 10;
@@ -41,5 +41,6 @@
         @include h4();
         color: $white;
         z-index: 10;
+        text-transform: capitalize;
     }
 }
